automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,6 +89,7 @@
    "source": [
     "# Your code here\n",
     "\n",
+    "words = macbeth.sp\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
