automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,15 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
-    "words = macbeth.sp\n",
+    "words = macbeth.split()\n",
+    "wor\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
