automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,14 +81,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\ufeff***The',\n",
+       " 'Project',\n",
+       " \"Gutenberg's\",\n",
+       " 'Etext',\n",
+       " 'of',\n",
+       " \"Shakespeare's\",\n",
+       " 'First',\n",
+       " 'Folio***',\n",
+       " '********************The',\n",
+       " 'Tragedie',\n",
+       " 'of',\n",
+       " 'Macbeth*********************',\n",
+       " 'This',\n",
+       " 'is',\n",
+       " 'our',\n",
+       " '3rd',\n",
+       " 'edition',\n",
+       " 'of',\n",
+       " 'most',\n",
+       " 'of']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
     "words = macbeth.split()\n",
-    "wor\n",
+    "words[:20]\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
