--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "words = macbeth.split()\n",
     "words[:20]\n",
-    "\n",
+    "for w in wor\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
