automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,9 @@
     "\n",
     "words = macbeth.split()\n",
     "words[:20]\n",
-    "for w in wor\n",
+    "w\n",
+    "for w in words:\n",
+    "    \n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
