automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,6 +105,8 @@
     "for w in words:\n",
     "    if \n",
     "    wf[w] += 1\n",
+    "    \n",
+    "    dictionary\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
