--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     "    if \n",
     "    wf[w] += 1\n",
     "    \n",
-    "    dict.\n",
+    "    dict.get\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
