--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
     "words[:20]\n",
     "wf = {}\n",
     "for w in words:\n",
-    "    wf.get()\n",
+    "    wf.get(w,0)\n",
     "    wf[w] += 1\n",
     "    \n",
     "    dict.get\n",
