--- a/index.ipynb
+++ b/index.ipynb
@@ -81,18 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-82006750eaa4>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-82006750eaa4>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    if wf.get(w,0)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
@@ -100,7 +91,7 @@
     "words[:20]\n",
     "wf = {}\n",
     "for w in words:\n",
-    "    if wf.get(w,0);;\n",
+    "    if wf.get(w,0):\n",
     "        wf[w] += 1\n",
     "    \n",
     "    dict.get\n",
