--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
     "words[:20]\n",
     "wf = {}\n",
     "for w in words:\n",
-    "    if \n",
+    "    if wf.get\n",
     "        wf[w] += 1\n",
     "wf    \n",
     "# Pseudo-code Outline\n",
