--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
     "for w in words:\n",
     "    if wf.get(w,0):\n",
     "        wf[w] += 1\n",
-    "        e\n",
+    "    else:\n",
+    "        wf[w]\n",
     "wf    \n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
