automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "427"
+       "620"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf['and']\n",
+    "wf['the']\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
