automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf['the']\n",
+    "wf = sorted(wf['the']\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
