automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "620"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
@@ -107,7 +96,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf = sorted(wf['the']\n",
+    "wf = sorted(wf)\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
