automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,9 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
@@ -97,7 +108,7 @@
     "        wf[w] = 1\n",
     "\n",
     "wf = sorted(wf)\n",
-    "\n",
+    "type(wf)\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
