automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,16 +81,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['\"AS-IS\".',\n",
+       " '\"Defects\".',\n",
+       " '\"PROJECT',\n",
+       " '\"Project',\n",
+       " '\"Project\").',\n",
+       " '\"Right',\n",
+       " '\"Small',\n",
+       " '\"canon\"',\n",
+       " '\"cliche\".',\n",
+       " '\"errors\"',\n",
+       " '\"liue\"',\n",
+       " '\"not\"',\n",
+       " '\"public',\n",
+       " '\"scholars\"',\n",
+       " '\"small',\n",
+       " '\"v\"\\'s.',\n",
+       " '\"vv\"',\n",
+       " '\"w\"\\'s,',\n",
+       " '#2264]',\n",
+       " '$2']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
