automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -106,10 +106,40 @@
        " '\"vv\"',\n",
        " '\"w\"\\'s,',\n",
        " '#2264]',\n",
-       " '$2']"
+       " '$2',\n",
+       " '&',\n",
+       " '&c.',\n",
+       " \"'Faith\",\n",
+       " \"'Gainst\",\n",
+       " \"'Tis\",\n",
+       " \"'Twas\",\n",
+       " \"'Twere\",\n",
+       " \"'Twixt\",\n",
+       " \"'boue\",\n",
+       " \"'em\",\n",
+       " \"'em.\",\n",
+       " \"'em:\",\n",
+       " \"'gainst\",\n",
+       " \"'ginne\",\n",
+       " \"'gins\",\n",
+       " \"'tis\",\n",
+       " \"'tis,\",\n",
+       " \"'twer\",\n",
+       " \"'twere\",\n",
+       " \"'twould\",\n",
+       " '(*)',\n",
+       " '(A',\n",
+       " '(And',\n",
+       " '(As,',\n",
+       " '(Beldams)',\n",
+       " '(CMU',\n",
+       " '(From',\n",
+       " '(How',\n",
+       " '(I',\n",
+       " '(Impostors']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +158,7 @@
     "\n",
     "wf = sorted(wf)\n",
     "type(wf)\n",
-    "wf[:20]\n",
+    "wf[:50]\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
