automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf = sorted(wf)\n",
+    "wf = sorted(wf.values())\n",
     "type(wf)\n",
     "wf[:50]\n",
     "# Pseudo-code Outline\n",
