automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,65 +81,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1]"
+       "[620,\n",
+       " 427,\n",
+       " 395,\n",
+       " 367,\n",
+       " 326,\n",
+       " 255,\n",
+       " 193,\n",
+       " 190,\n",
+       " 185,\n",
+       " 170,\n",
+       " 169,\n",
+       " 158,\n",
+       " 142,\n",
+       " 141,\n",
+       " 137,\n",
+       " 133,\n",
+       " 131,\n",
+       " 128,\n",
+       " 127,\n",
+       " 122,\n",
+       " 116,\n",
+       " 114,\n",
+       " 108,\n",
+       " 100,\n",
+       " 80,\n",
+       " 79,\n",
+       " 75,\n",
+       " 73,\n",
+       " 73,\n",
+       " 70,\n",
+       " 67,\n",
+       " 67,\n",
+       " 66,\n",
+       " 64,\n",
+       " 63,\n",
+       " 62,\n",
+       " 61,\n",
+       " 61,\n",
+       " 59,\n",
+       " 59,\n",
+       " 58,\n",
+       " 58,\n",
+       " 58,\n",
+       " 58,\n",
+       " 57,\n",
+       " 57,\n",
+       " 55,\n",
+       " 53,\n",
+       " 51,\n",
+       " 47]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,9 +156,9 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf = sorted(wf.values())\n",
+    "wf = sorted(wf.values(),reverse=True)\n",
     "type(wf)\n",
-    "wf[:50]\n",
+    "wf[:25]\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
