automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "        wf[w] = 1\n",
     "\n",
     "wf = sorted(wf.values(),reverse=True)\n",
-    "type(wf)\n",
+    "prittype(wf)\n",
     "wf[:25]\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
