automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,9 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -111,35 +118,10 @@
        " 114,\n",
        " 108,\n",
        " 100,\n",
-       " 80,\n",
-       " 79,\n",
-       " 75,\n",
-       " 73,\n",
-       " 73,\n",
-       " 70,\n",
-       " 67,\n",
-       " 67,\n",
-       " 66,\n",
-       " 64,\n",
-       " 63,\n",
-       " 62,\n",
-       " 61,\n",
-       " 61,\n",
-       " 59,\n",
-       " 59,\n",
-       " 58,\n",
-       " 58,\n",
-       " 58,\n",
-       " 58,\n",
-       " 57,\n",
-       " 57,\n",
-       " 55,\n",
-       " 53,\n",
-       " 51,\n",
-       " 47]"
+       " 80]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +139,7 @@
     "        wf[w] = 1\n",
     "\n",
     "wf = sorted(wf.values(),reverse=True)\n",
-    "prittype(wf)\n",
+    "print(type(wf))\n",
     "wf[:25]\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
