automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf = sorted(wf.values(),reverse=True)\n",
+    "wf = sorted(wf.items(),key=)\n",
     "print(type(wf))\n",
     "wf[:25]\n",
     "# Pseudo-code Outline\n",
