automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,19 +81,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-45b89a633829>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mwf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mwf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitemgetter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mwf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('\\ufeff***The', 1),\n",
+       " ('3rd', 1),\n",
+       " ('plays.', 1),\n",
+       " ('index.', 1),\n",
+       " ('Copyright', 1),\n",
+       " ('changing', 1),\n",
+       " ('world,', 1),\n",
+       " ('country', 1),\n",
+       " ('posting', 1),\n",
+       " ('files!!', 1),\n",
+       " ('important', 1),\n",
+       " ('header.', 1),\n",
+       " ('encourage', 1),\n",
+       " ('own', 1),\n",
+       " ('keeping', 1),\n",
+       " ('electronic', 1),\n",
+       " ('path', 1),\n",
+       " ('remove', 1),\n",
+       " ('**Welcome', 1),\n",
+       " ('Plain', 1),\n",
+       " ('Vanilla', 1),\n",
+       " ('Electronic', 1),\n",
+       " ('Texts**', 1),\n",
+       " ('**Etexts', 1),\n",
+       " ('Readable', 1)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -109,7 +139,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf = sorted(wf.items(),key=operator.itemgetter(2))\n",
+    "wf = sorted(wf.items(),key=operator.itemgetter(1))\n",
     "print(type(wf))\n",
     "wf[:25]\n",
     "# Pseudo-code Outline\n",
