automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -94,34 +94,34 @@
     {
      "data": {
       "text/plain": [
-       "[('\\ufeff***The', 1),\n",
-       " ('3rd', 1),\n",
-       " ('plays.', 1),\n",
-       " ('index.', 1),\n",
-       " ('Copyright', 1),\n",
-       " ('changing', 1),\n",
-       " ('world,', 1),\n",
-       " ('country', 1),\n",
-       " ('posting', 1),\n",
-       " ('files!!', 1),\n",
-       " ('important', 1),\n",
-       " ('header.', 1),\n",
-       " ('encourage', 1),\n",
-       " ('own', 1),\n",
-       " ('keeping', 1),\n",
-       " ('electronic', 1),\n",
-       " ('path', 1),\n",
-       " ('remove', 1),\n",
-       " ('**Welcome', 1),\n",
-       " ('Plain', 1),\n",
-       " ('Vanilla', 1),\n",
-       " ('Electronic', 1),\n",
-       " ('Texts**', 1),\n",
-       " ('**Etexts', 1),\n",
-       " ('Readable', 1)]"
+       "[('the', 620),\n",
+       " ('and', 427),\n",
+       " ('of', 395),\n",
+       " ('to', 367),\n",
+       " ('I', 326),\n",
+       " ('a', 255),\n",
+       " ('you', 193),\n",
+       " ('in', 190),\n",
+       " ('is', 185),\n",
+       " ('my', 170),\n",
+       " ('And', 169),\n",
+       " ('that', 158),\n",
+       " ('not', 142),\n",
+       " ('with', 141),\n",
+       " ('Macb.', 137),\n",
+       " ('be', 133),\n",
+       " ('The', 131),\n",
+       " ('it', 128),\n",
+       " ('his', 127),\n",
+       " ('your', 122),\n",
+       " ('our', 116),\n",
+       " ('haue', 114),\n",
+       " ('this', 108),\n",
+       " ('for', 100),\n",
+       " ('That', 80)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
     "    else:\n",
     "        wf[w] = 1\n",
     "\n",
-    "wf = sorted(wf.items(),key=operator.itemgetter(1))\n",
+    "wf = sorted(wf.items(),key=operator.itemgetter(1),reverse=True)\n",
     "print(type(wf))\n",
     "wf[:25]\n",
     "# Pseudo-code Outline\n",
