automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,6 +143,12 @@
     "print(type(wf))\n",
     "wf[:25]\n",
     "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.bar(x,y,label=””)\n",
+    "plt.xlabel('')\n",
+    "plt.ylabel('')\n",
+    "plt.title(\"\")\n",
+    "plt.show()\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
