automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,49 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-24-c05a1599319a>, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-c05a1599319a>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    plt.bar(wf[:24],label=””)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 620),\n",
-       " ('and', 427),\n",
-       " ('of', 395),\n",
-       " ('to', 367),\n",
-       " ('I', 326),\n",
-       " ('a', 255),\n",
-       " ('you', 193),\n",
-       " ('in', 190),\n",
-       " ('is', 185),\n",
-       " ('my', 170),\n",
-       " ('And', 169),\n",
-       " ('that', 158),\n",
-       " ('not', 142),\n",
-       " ('with', 141),\n",
-       " ('Macb.', 137),\n",
-       " ('be', 133),\n",
-       " ('The', 131),\n",
-       " ('it', 128),\n",
-       " ('his', 127),\n",
-       " ('your', 122),\n",
-       " ('our', 116),\n",
-       " ('haue', 114),\n",
-       " ('this', 108),\n",
-       " ('for', 100),\n",
-       " ('That', 80)]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -144,7 +111,7 @@
     "wf[:25]\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.bar(x,y,label=””)\n",
+    "plt.bar(wf[:24],label=””)\n",
     "plt.xlabel('')\n",
     "plt.ylabel('')\n",
     "plt.title(\"\")\n",
