automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,6 +106,8 @@
    "source": [
     "# Your code here\n",
     "import operator\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline  makes it inline with the Jupyter document.\n",
     "\n",
     "words = macbeth.split()\n",
     "words[:20]\n",
