--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
     "wf[:25]\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.bar(wf[:24],label=\"\")\n",
+    "plt.bar(wf[0][:24],label=\"\")\n",
     "plt.xlabel('')\n",
     "plt.ylabel('')\n",
     "plt.title(\"\")\n",
