automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,6 +143,7 @@
     "wf = sorted(wf.items(),key=operator.itemgetter(1),reverse=True)\n",
     "print(type(wf))\n",
     "print(wf[:24])\n",
+    "print(wf[0][:])\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
     "plt.bar(wf[0][:24],wf[1][:24],label=\"\")\n",
