automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,9 +150,9 @@
     "x = wf[0][:24]\n",
     "print(x)\n",
     "#plt.figure(figsize=(8,6))\n",
-    "plt.bar(wf[0][:24],wf[1][:24],label=\"\")\n",
-    "plt.xlabel('')\n",
-    "plt.ylabel('')\n",
+    "#plt.bar(wf[0][:24],wf[1][:24],label=\"\")\n",
+    "#plt.xlabel('')\n",
+    "#plt.ylabel('')\n",
     "plt.title(\"\")\n",
     "#plt.show()\n",
     "\n",
