--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
     "        wf[w] = 1\n",
     "\n",
     "wf = sorted(wf.items(),key=operator.itemgetter(1),reverse=True)\n",
-    "print(wf[0][:24])\n",
+    "print(wf[0])\n",
     "print(type(wf))\n",
     "print(wf[:24])\n",
     "\n",
