automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('the', 620)\n",
+      "the\n",
       "<class 'list'>\n",
       "[('the', 620), ('and', 427), ('of', 395), ('to', 367), ('I', 326), ('a', 255), ('you', 193), ('in', 190), ('is', 185), ('my', 170), ('And', 169), ('that', 158), ('not', 142), ('with', 141), ('Macb.', 137), ('be', 133), ('The', 131), ('it', 128), ('his', 127), ('your', 122), ('our', 116), ('haue', 114), ('this', 108), ('for', 100)]\n",
       "('the', 620)\n"
@@ -111,7 +111,8 @@
     "        wf[w] = 1\n",
     "\n",
     "wf = sorted(wf.items(),key=operator.itemgetter(1),reverse=True)\n",
-    "print(wf[0])\n",
+    "for \n",
+    "print(wf[0][0])\n",
     "print(type(wf))\n",
     "print(wf[:24])\n",
     "\n",
