automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,8 +111,10 @@
     "        wf[w] = 1\n",
     "\n",
     "wf = sorted(wf.items(),key=operator.itemgetter(1),reverse=True)\n",
+    "x = []\n",
+    "y = []\n",
     "for i in 0..24:\n",
-    "    x.append\n",
+    "    x.append(wf)\n",
     "print(wf[0][0])\n",
     "print(type(wf))\n",
     "print(wf[:24])\n",
