automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,8 @@
     "x = []\n",
     "y = []\n",
     "for i in 0..24:\n",
-    "    x.append(wf)\n",
+    "    x.append(wf[i][0])\n",
+    "    y.append(wf[i][])\n",
     "print(wf[0][0])\n",
     "print(type(wf))\n",
     "print(wf[:24])\n",
