automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,10 +115,11 @@
     "y = []\n",
     "for i in 0..24:\n",
     "    x.append(wf[i][0])\n",
-    "    y.append(wf[i][])\n",
-    "print(wf[0][0])\n",
+    "    y.append(wf[i][0])\n",
+    "\n",
+    "print(x)\n",
     "print(type(wf))\n",
-    "print(wf[:24])\n",
+    "print(w)\n",
     "\n",
     "x = wf[0][:24]\n",
     "print(x)\n",
