automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -81,15 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-0a22f3715918>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-0a22f3715918>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    for i in 0..24:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the\n",
+      "<class 'list'>\n",
+      "[('the', 620), ('and', 427), ('of', 395), ('to', 367), ('I', 326), ('a', 255), ('you', 193), ('in', 190), ('is', 185), ('my', 170), ('And', 169), ('that', 158), ('not', 142), ('with', 141), ('Macb.', 137), ('be', 133), ('The', 131), ('it', 128), ('his', 127), ('your', 122), ('our', 116), ('haue', 114), ('this', 108), ('for', 100)]\n",
+      "('the', 620)\n"
      ]
     }
    ],
@@ -111,13 +113,13 @@
     "wf = sorted(wf.items(),key=operator.itemgetter(1),reverse=True)\n",
     "x = []\n",
     "y = []\n",
-    "for i in range(0,24):\n",
+    "for i in 0..24:\n",
     "    x.append(wf[i][0])\n",
     "    y.append(wf[i][0])\n",
     "\n",
     "print(x)\n",
     "print(type(wf))\n",
-    "print(y)\n",
+    "print(w)\n",
     "\n",
     "x = wf[0][:24]\n",
     "print(x)\n",
