--- a/index.ipynb
+++ b/index.ipynb
@@ -81,15 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-0a22f3715918>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-0a22f3715918>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    for i in 0..24:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the', 'and', 'of', 'to', 'I', 'a', 'you', 'in', 'is', 'my', 'And', 'that', 'not', 'with', 'Macb.', 'be', 'The', 'it', 'his', 'your', 'our', 'haue', 'this', 'for']\n",
+      "<class 'list'>\n",
+      "[620, 427, 395, 367, 326, 255, 193, 190, 185, 170, 169, 158, 142, 141, 137, 133, 131, 128, 127, 122, 116, 114, 108, 100]\n",
+      "('the', 620)\n"
      ]
     }
    ],
@@ -113,7 +115,7 @@
     "y = []\n",
     "for i in range(0,24):\n",
     "    x.append(wf[i][0])\n",
-    "    y.append(wf[i][0])\n",
+    "    y.append(wf[i][1])\n",
     "\n",
     "print(x)\n",
     "print(type(wf))\n",
@@ -122,7 +124,7 @@
     "x = wf[0][:24]\n",
     "print(x)\n",
     "#plt.figure(figsize=(8,6))\n",
-    "#plt.bar(wf[0][:24],wf[1][:24],label=\"\")\n",
+    "#plt.bar(wf[0,label=\"\")\n",
     "#plt.xlabel('')\n",
     "#plt.ylabel('')\n",
     "#plt.title(\"\")\n",
