automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,9 +124,9 @@
     "x = wf[0][:24]\n",
     "print(x)\n",
     "#plt.figure(figsize=(8,6))\n",
-    "#plt.bar(wf[0,label=\"\")\n",
-    "#plt.xlabel('')\n",
-    "#plt.ylabel('')\n",
+    "#plt.bar(x,y,label=\"\")\n",
+    "#plt.xlabel('Words')\n",
+    "#plt.ylabel('Count')\n",
     "#plt.title(\"\")\n",
     "#plt.show()\n",
     "\n",
