automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
     "for i in range(0,24):\n",
     "    x.append(wf[i][0])\n",
     "    y.append(wf[i][1])\n",
-    "\n",
+    "print(le)\n",
     "plt.figure(figsize=(15,6))\n",
     "plt.bar(x,y,label=\"\")\n",
     "plt.xlabel('Words')\n",
