--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
     "%matplotlib inline  \n",
     "\n",
     "words = macbeth.split()\n",
-    "words = words.\n",
+    "words = words.tolower()\n",
     "wf = {}\n",
     "for w in words:\n",
     "    if wf.get(w,0):\n",
