automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,11 @@
     }
    ],
    "source": [
-    "# Your code here\n",
+    "\n",
+    "plt.xlabel('Words')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title(\"25 Most Common Words in Macbeth\")\n",
+    "plt.show()# Your code here\n",
     "import operator\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline  \n",
@@ -127,10 +131,6 @@
     "print(len(x))\n",
     "plt.figure(figsize=(15,6))\n",
     "plt.bar(x,y,label=\"\")\n",
-    "plt.xlabel('Words')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title(\"25 Most Common Words in Macbeth\")\n",
-    "plt.show()\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
