--- a/index.ipynb
+++ b/index.ipynb
@@ -105,11 +105,7 @@
     }
    ],
    "source": [
-    "\n",
-    "plt.xlabel('Words')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title(\"25 Most Common Words in Macbeth\")\n",
-    "plt.show()# Your code here\n",
+    "# Your code here\n",
     "import operator\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline  \n",
@@ -131,6 +127,10 @@
     "print(len(x))\n",
     "plt.figure(figsize=(15,6))\n",
     "plt.bar(x,y,label=\"\")\n",
+    "plt.xlabel('Words')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title(\"25 Most Common Words in Macbeth\")\n",
+    "plt.show()\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
